test/source/errors/output-invalid-var.hc
// This file attempts to output a variable which does not exist.
// This should result in an error when compiling.

output foo
